# generate-random-aws-account-id

./: Cargo.toml  Readme.md
src/: main.rs
