[package]
name = "generate-random-aws-account-id"
version = "0.1.0"
authors = ["sinofseven <em.s.00001@gmail.com>"]
edition = "2018"
description = "Generate a random AWS Account ID"
license = "MIT OR Apache-2.0"


# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rand = "0.8.3"
